# rules_pkl

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .tar-exclude-from-file.conf  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  defs.bzl  get-rio-version.sh  repositories.bzl  rio.pcl  rio.pkl  setup.bzl  workspace.bzl
docs/: BUILD.bazel  rules_pkl_doc.md  rules_pkl_docs.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
example/: .bazelrc  MODULE.bazel
example/pets/: BUILD.bazel  cats.pkl  dogs.pkl  hamster.pcf
example/pkl_project/: .bazelrc  MODULE.bazel  PklProject  PklProject.deps.json
example/pkl_project/pkl/: BUILD.bazel
example/simple/: BUILD.bazel
pkl/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl  workspace.bzl
pkl/private/: BUILD.bazel  constants.bzl  pkl.bzl  pkl_cache.bzl  pkl_codegen.bzl  pkl_deps.bzl  pkl_deps_install.json  pkl_doc.bzl  pkl_library.bzl  pkl_package.bzl  pkl_package_names.bzl  pkl_project.bzl  pkl_test_suite.bzl  providers.bzl  remote_pkl_package.bzl  resolved_toolchain.bzl  run_pkl_script.sh  toolchain.bzl  toolchains_repo.bzl  versions.bzl
pkl/private/org/pkl_lang/bazel/symlinks/: BUILD.bazel  Symlinks.java
pkl/tests/: BUILD.bazel  pkl_run_test.bzl  versions_test.bzl
private/: BUILD.bazel  pcl.bzl  pcl_cache_entry.bzl  pcl_codegen.bzl  pcl_doc.bzl  pcl_hub_deps.bzl  pcl_library.bzl  pcl_pin.bzl  pcl_test_suite.bzl  providers.bzl  utils.bzl
private/com/apple/federation/pcl/locks/: BUILD.bazel  Downloader.java  GenerateLock.java  Module.java  Netrc.java  NetrcParser.java
private/com/apple/federation/pcl/symlinks/: BUILD.bazel  Symlinks.java
private/stardoc/: BUILD.bazel  README-preamble.md  apple_rules_header.md
private/stubs/: BUILD.bazel  invalid.pcl  valid.pcl
test/: BUILD.bazel  requirements_lock.txt
test/integration_tests/: BUILD.bazel
test/integration_tests/example_workspaces/simple/: BUILD.bazel  MODULE.bazel  PklProject  example.pkl  verify_generated_yaml.sh
test/pkl_codegen_java/: BUILD.bazel  TestPklCodegen.java
test/pkl_codegen_java/srcs/: base.pkl  litter.pkl
test/pkl_doc/: BUILD.bazel  pkl_doc_test.py
test/pkl_doc/srcs/: doc-package-info.pkl  rabbits.pkl
test/pkl_eval/: BUILD.bazel  verify_generated_pkl.sh  verify_pkl_eval_output.sh
test/pkl_eval/expected/: filtered_animals.pcf  multiple_outputs_not_specified.txt  multiple_outputs_specified.txt  pets.pcf  single_output_not_specified.txt  single_output_specified.txt
test/pkl_eval/srcs/: animals.pkl  multiple_outputs.pkl  pets.pkl  pets_override.pkl  pets_with_ext_lib_dep.pkl  pets_with_genrule_dep.pkl  simple.pkl
test/pkl_eval/srcs/foo/: BUILD.bazel
test/pkl_library/: BUILD.bazel  transitive_sources_test.py
test/pkl_test/: BUILD.bazel
test/pkl_test/srcs/: cat.pkl  test_1.pkl  test_2.pkl
test/toolchain/: BUILD.bazel  test_current_toolchain.sh  test_current_toolchain_runtime.sh
tests/pkl_codegen_java/: BUILD.bazel
