load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("//java/private:artifact.bzl", "artifact")
load("//pcl/private:pcl.bzl", "PCL_JVM_FLAGS")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "workspace.bzl",
])

copy_file(
    name = "pcl_native_executable",
    src = "@pcl_constants//:pcl_native_executable",
    out = "pcl",
    allow_symlink = True,
    is_executable = True,
    visibility = ["//visibility:public"],
)

java_binary(
    name = "pcl_java_executable",
    jvm_flags = PCL_JVM_FLAGS,
    main_class = "com.apple.pcl.cli.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "@pcl_java//jar",
    ],
)

java_binary(
    name = "pcl_codegen_cli",
    main_class = "com.apple.pcl.codegen.java.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        # pcl-apple provides the `applehub` provider
        artifact("com.apple.pcl:pcl-apple"),
        artifact("com.apple.pcl:pcl-codegen-java"),
    ],
)

java_binary(
    name = "pcl_doc_cli",
    main_class = "com.apple.pcl.doc.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        artifact("com.apple.pcl:pcl-doc"),
    ],
)

bzl_library(
    name = "docs",
    srcs = [
        "repositories.bzl",
        "setup.bzl",
        "//pcl/private:docs",
    ],
    visibility = [
        "//:__pkg__",
        "//pcl:__subpackages__",
    ],
)
