load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("//java/private:artifact.bzl", "artifact")
load("//pkl/private:pkl.bzl", "PKL_JVM_FLAGS")

package(default_visibility = ["//visibility:public"])

exports_files([
    "defs.bzl",
    "workspace.bzl",
])

copy_file(
    name = "pkl_native_executable",
    src = "@pkl_constants//:pkl_native_executable",
    out = "pkl",
    allow_symlink = True,
    is_executable = True,
    visibility = ["//visibility:public"],
)

java_binary(
    name = "pkl_java_executable",
    jvm_flags = PKL_JVM_FLAGS,
    main_class = "com.apple.pkl.cli.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "@pkl_java//jar",
    ],
)

java_binary(
    name = "pkl_codegen_cli",
    main_class = "com.apple.pkl.codegen.java.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        # pkl-apple provides the `applehub` provider
        artifact("com.apple.pkl:pkl-apple"),
        artifact("com.apple.pkl:pkl-codegen-java"),
    ],
)

java_binary(
    name = "pkl_doc_cli",
    main_class = "com.apple.pkl.doc.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        artifact("com.apple.pkl:pkl-doc"),
    ],
)

bzl_library(
    name = "docs",
    srcs = [
        "repositories.bzl",
        "setup.bzl",
        "//pkl/private:docs",
    ],
    visibility = [
        "//:__pkg__",
        "//pkl:__subpackages__",
    ],
)
