load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

filegroup(
    name = "workspace_files",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "WORKSPACE",
        "//pkl:all_files",
        "//pkl/private:all_files",
        "//pkl/private/org/pkl_lang/bazel/symlinks:all_files",
    ],
    visibility = ["//test/integration_tests:__subpackages__"],
)
