"Bazel dependencies"

module(
    name = "org_pkl-lang_rules_pkl",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")
bazel_dep(name = "platforms", version = "0.0.5")

bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True)

pkl = use_extension("//pkl:extensions.bzl", "pkl")
pkl.toolchain(pkl_version = "0.24.0")
use_repo(pkl, "pkl_toolchains")

register_toolchains("@pkl_toolchains//:all")
