load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":defs.bzl", "pkl_toolchain")

exports_files(["defs.bzl"])

toolchain_type(
    name = "toolchain_type",
)

pkl_toolchain(
    name = "pkl-toolchain",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "default-toolchain",
    toolchain = ":pkl-toolchain",
    toolchain_type = ":toolchain_type",
)

bzl_library(
    name = "docs",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//pkl/private:docs",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

alias(
    name = "pkl_cli",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@pkl-cli-macos//file",
    }),
    visibility = ["//visibility:public"],
)
