load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":defs.bzl", "pkl_codegen_java_toolchain", "pkl_doc_toolchain", "pkl_toolchain")
load("@rules_jvm_external//:defs.bzl", "artifact")

exports_files(["defs.bzl"])

toolchain_type(
    name = "toolchain_type",
)

toolchain_type(
    name = "codegen_toolchain_type",
)

toolchain_type(
    name = "doc_toolchain_type",
)

pkl_toolchain(
    name = "pkl-toolchain",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "default-toolchain",
    toolchain = ":pkl-toolchain",
    toolchain_type = ":toolchain_type",
)

pkl_codegen_java_toolchain(
    name = "pkl-codegen-java-toolchain",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "codegen-toolchain",
    toolchain = ":pkl-codegen-java-toolchain",
    toolchain_type = ":codegen_toolchain_type",
)

pkl_doc_toolchain(
    name = "pkl-doc-toolchain",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "doc-toolchain",
    toolchain = ":pkl-doc-toolchain",
    toolchain_type = ":doc_toolchain_type",
)

bzl_library(
    name = "docs",
    srcs = glob(["*.bzl"]),
    visibility = ["//visibility:public"],
    deps = [
        "//pkl/private:docs",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

alias(
    name = "pkl_cli",
    actual = select({
        "@bazel_tools//src/conditions:darwin_arm64": "@pkl-cli-macos//file",
        "@bazel_tools//src/conditions:linux_aarch64": "@pkl-cli-linux//file",
        "@bazel_tools//src/conditions:linux_x86_64": "@pkl-cli-linux//file",
    }),
    visibility = ["//visibility:public"],
)

java_binary(
    name = "pkl_codegen_cli",
    main_class = "org.pkl.codegen.java.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        artifact(
            "com.apple.pkl:pkl-codegen-java",
            repository_name = "rules_pkl_deps",
        ),
    ],
)

java_binary(
    name = "pkl_doc_cli",
    main_class = "org.pkl.doc.Main",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        artifact(
            "com.apple.pkl:pkl-doc:0.24.6",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
