# Override http_archive for local testing
local_repository(
    name = "org_pkl-lang_rules_pkl",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_pkl setup #
######################
# Fetches the rules_pkl dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@org_pkl-lang_rules_pkl//pkl:repositories.bzl", "rules_pkl_dependencies")

rules_pkl_dependencies()
