module(
    name = "rules_pkl_examples_pkl_project",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "rules_pkl",
    version = "0.0.0",
)

pkl = use_extension("@rules_pkl//pkl:extensions.bzl", "pkl")
pkl.project(
    name = "mypkl",
    pkl_project = "@//:PklProject",
    pkl_project_deps = "@//:PklProject.deps.json",
)
use_repo(
    pkl,
    "mypkl",
)

local_path_override(
    module_name = "rules_pkl",
    path = "../../",
)
