load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "docs",
    srcs = glob(["*.bzl"]),
    visibility = ["//pkl:__subpackages__"],
    deps = [
        "@rules_jvm_external//:implementation",
    ],
)

sh_binary(
    name = "run_pkl_script",
    srcs = ["run_pkl_script.sh"],
    visibility = ["//visibility:public"],
)
