load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = [
        "//:__pkg__",
        "//test/integration_tests:__subpackages__",
    ],
)

bzl_library(
    name = "docs",
    srcs = glob(["*.bzl"]),
    visibility = ["//pkl:__subpackages__"],
    deps = [
        "@rules_jvm_external//:implementation",
    ],
)

sh_binary(
    name = "run_pkl_script",
    srcs = ["run_pkl_script.sh"],
    visibility = ["//visibility:public"],
)
