load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "build-rules",
    out = "build-rules.md",
    input = "//pkl:defs.bzl",
    symbol_names = [
        "pkl_config_java_library",
        "pkl_config_src",
        "pkl_doc",
        "pkl_library",
        "pkl_run",
        "pkl_test",
    ],
    deps = [
        "//pkl:docs",
    ],
)

stardoc(
    name = "workspace-rules",
    out = "workspace-rules.md",
    input = "//pkl:workspace.bzl",
    deps = [
        "//pkl:docs",
        "@pkl_constants//:docs",
    ],
)

genrule(
    name = "stardoc",
    srcs = [
        "README-preamble.md",
        "apple_rules_header.md",
        ":build-rules.md",
        ":workspace-rules.md",
    ],
    outs = ["README.md"],
    cmd = """cat \
        $(location :README-preamble.md) \
        $(location :apple_rules_header.md) \
        $(location :workspace-rules.md) \
        $(location :build-rules.md) > $@""",
)
