load("//pkl:defs.bzl", "pkl_eval", "pkl_test", "pkl_test_suite")

pkl_test(
    name = "simple_test",
    srcs = ["srcs/test_1.pkl"],
    data = ["srcs/cat.pkl"],
)

pkl_eval(
    name = "pkl_eval",
    srcs = ["srcs/test_1.pkl"],
    data = ["srcs/cat.pkl"],
)

pkl_test(
    name = "empty_pkl_test",
    srcs = ["srcs/test_2.pkl"],
)

pkl_test_suite(
    name = "test",
    srcs = glob(["*.pkl"]),
)
