load("@rules_jvm_external//:defs.bzl", "artifact")

java_binary(
    name = "symlinks",
    srcs = ["Symlinks.java"],
    javacopts = [
        "--release",
        "11",
    ],
    main_class = "org.pkl_lang.bazel.symlinks.Symlinks",
    visibility = ["//visibility:public"],
    deps = [
        artifact(
            "com.google.code.gson:gson",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
