load("@rules_jvm_external//:defs.bzl", "artifact")

filegroup(
    name = "all_files",
    srcs = glob(["*"]),
    visibility = [
        "//:__pkg__",
        "//test/integration_tests:__subpackages__",
    ],
)

java_binary(
    name = "symlinks",
    srcs = ["Symlinks.java"],
    javacopts = [
        "--release",
        "11",
    ],
    main_class = "org.pkl_lang.bazel.symlinks.Symlinks",
    visibility = ["//visibility:public"],
    deps = [
        artifact(
            "com.google.code.gson:gson",
            repository_name = "rules_pkl_deps",
        ),
    ],
)
