load("//java/private:artifact.bzl", "artifact")

java_binary(
    name = "GenerateLock",
    srcs = glob(["*.java"]),
    javacopts = [
        "--release",
        "11",
    ],
    main_class = "com.apple.federation.pcl.locks.GenerateLock",
    visibility = ["//visibility:public"],
    deps = [
        artifact("com.google.code.gson:gson"),
        artifact("com.google.guava:guava"),
    ],
)
