load("//java/private:artifact.bzl", "artifact")

java_binary(
    name = "symlinks",
    srcs = ["Symlinks.java"],
    javacopts = [
        "--release",
        "11",
    ],
    main_class = "com.apple.federation.pkl.symlinks.Symlinks",
    visibility = ["//visibility:public"],
    deps = [
        artifact("com.google.code.gson:gson"),
    ],
)
